<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wi-Fi Timer</string>
    <string name="instructions_on_wifi_activation">When do you want to turn the wifi back off?</string>
    <string name="instructions_on_wifi_deactivation">When do you want to turn the wifi back on?</string>
    <string name="set">Time</string>
    <string name="never">Never</string>
    <string name="now">Now</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_dialog_title">About Wi-Fi Timer</string>
    <string name="about_dialog_content">Wi-Fi Timer is maintained by Laurent Sebag.
    	\n\nIt is licensed under the free software license <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">GPLv3 or later</a>.
    	\n\nThis software uses portions of code from Peter Baldwin\'s \"Phone Silencer\" project, licensed under the GPLv3 or later.
    </string>
    <string name="ticker_on_wifi_activation">Wi-Fi turned on for %s</string>
    <string name="ticker_on_wifi_deactivation">Wi-Fi turned off for %s</string>
    <string name="notification_title_on_wifi_activation">Wi-Fi turned on until %s</string>
    <string name="notification_title_on_wifi_deactivation">Wi-Fi turned off until %s</string>
    <string name="notification_text">Select to change or cancel</string>
    <string name="notification_action_cancel">Cancel</string>
    <string name="notification_action_snooze">+10</string>
    <string name="notification_action_wifi_on">Wi-Fi on</string>
    <string name="notification_action_wifi_off">Wi-Fi off</string>
    <plurals name="plurals_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="plurals_hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="info">Using <b>Wi-Fi Timer</b> is easy!
    Just turn off the wifi using the power control widget or the settings menu.

    \n\nWhenever you set your wifi to <b>off</b>
    you will be prompted to enter
    the time at which you would like your wifi to be turned back on.

    \n\nThe timer will always be initialized to the current time, so if you want to set
    the timer for two hours, just tap the hour <b>+</b>
    button twice.

    \n\nOnce the timer has been set, a notification will appear
    in the notification bar
    indicating the time remaining.
    You can select the notification to <b>adjust</b>
    or <b>cancel</b> the timer.
    You can also cancel the timer at any time by simply turning the wifi back on
    using the power control widget or the menu settings.

    \n\nYou can also choose Wi-Fi Timer to switch your wifi off after a laps of time instead.
    Visit the settings to choose this option.

    \n\nIf you decide you don\'t want to be prompted anymore,
    just turn off the <b>Enable Wi-Fi Timer</b> option in the Settings screen.

    \n\nWi-Fi Timer automatically sends anonymous usage statistics to help improve the application.
    If you prefer not to participate, you can opt out in the Settings screen.
    </string>

    <string name="description">"Since 2.3.3 on my Nexus One, I started to have less
    battery time. I did this little app to save my battery while I'm at work and don't have
    a wifi access point. I hope this application can be useful for you too!
    When this application is installed,
    each time you turn your wifi off you will be asked how long you
    would like before restoring it. After that period of time has
    passed, your wifi will be automatically turned back on."</string>

    <string name="settings_activity_label">Wi-Fi Timer - Settings</string>
    <string name="preference_category_options">Options</string>
    <string name="preference_category_help_us">Help us</string>
    <string name="preference_timer_usage_key"
        translatable="false">timer_usage</string>
    <string name="preference_timer_usage_title">Wi-Fi Timer mode</string>
    <string name="preference_timer_usage_dialog_title">Choose a mode</string>
    <string name="preference_share_analytics_key"
        translatable="false">share_analytics</string>
    <string name="preference_analytics_title">Share anonymous statistics</string>
    <string name="preference_analytics_summary">Help Wi-Fi Timer get better by sending anonymous usage statistics</string>
    <string name="preference_wifi_timer_enabled_key"
        translatable="false">wifi_timer_enabled</string>
    <string name="preference_wifi_timer_enabled_title">Enable Wi-Fi Timer</string>
    <string name="preference_report_bug_key"
        translatable="false">report_bug</string>
    <string name="preference_report_bug_title">Report a bug</string>
    <string name="preference_request_feature_key"
        translatable="false">request_feature</string>
    <string name="preference_request_feature_title">Suggest a new feature</string>
    <string name="preference_rate_app_key"
        translatable="false">rate_app</string>
    <string name="preference_rate_app_title">Rate the app on Play Store</string>
    <string name="snack_bar_app_disabled">You have disabled Wi-Fi Timer</string>
    <string name="snack_bar_action_enable">enable</string>
    <string name="button_increase"
        translatable="false">+</string>
    <string name="button_decrease"
        translatable="false">-</string>
    <string name="onboarding_skip">SKIP</string>
    <string name="onboarding_done">DONE</string>
    <string name="onboarding_next"
        translatable="false"><![CDATA[>]]></string>
    <string name="onboarding_previous"
        translatable="false"><![CDATA[<]]></string>
    <string name="onboarding_title_screen1">Wi-Fi detection</string>
    <string name="onboarding_subtitle_screen1">Wi-Fi Timer is automatically displayed when you turn the Wi-Fi
        <b>ON</b> or <b>OFF</b></string>
    <string name="onboarding_title_screen2">Set a Timer</string>
    <string name="onboarding_subtitle_screen2">Wi-Fi Timer remembers to change the Wi-Fi back <b>ON</b> or
        <b>OFF</b> for you</string>
    <string name="onboarding_title_screen3">Choose a mode</string>
    <string name="onboarding_subtitle_screen3">TODO: insert selection here</string>
    <string name="onboarding_title_screen4">You\'re all set</string>
    <string name="onboarding_subtitle_screen4">We hope you\'ll enjoy Wi-Fi Timer</string>
</resources>
