<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/onboarding_navbar_delimiter"
        android:background="@color/primary_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/onboarding_navbar_height"
        android:gravity="center">

        <Button
            android:id="@+id/onboarding_button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_skip"/>

        <Button
            android:id="@+id/onboarding_button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_previous"
            android:visibility="gone"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/onboarding_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_next"/>

        <Button
            android:id="@+id/onboarding_button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_done"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
